html content and styling

--- a/index.html
+++ b/index.html
@@ -10,5 +10,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	<header>
+		<h1><span id="hot">Hot</span> or <span id="cold">Cold</span></h1>
+		<h2>How good are you at guessing? Why don't you try your skills.</h2>
+	</header>
+	<div id="inputbox">
+		<form id="center">
+			<fieldset id="boxgroup">
+				<legend id="legend">PLAY HERE</legend>
+				<label for="guess" >What's your guess?</label><br/>
+				<input type="text" id="guess"><br/>
+				<button type="submit" id="submitguess" class="button">Submit</button>
+				<button type="submit" id="newgame" class="button">New Game</button>
+			</fieldset>
+		</form>
+	</div>
+	<div id="comments"></div>
+	<div id="meter"></div>
 </body>
 </html>
