--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<fieldset id="boxgroup">
 				<legend id="legend">PLAY HERE</legend>
 				<label for="guess" >Can you guess the secret number from 0 - 100</label><br/>
-				<input type="text" id="guess"><br/>
+				<input type="text" id="guess" maxlength="3"><br/>
 				<button type="button" id="submitguess" class="button" href="#">Submit</button>
 				<button type="button" id="newgame" class="button">New Game</button>
 			</fieldset>
